Reducing file size by uploading all html images and generating links

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -29,7 +29,6 @@
     />
   </head>
   <body>
-
     <div class="home">
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -83,7 +82,8 @@
       <div class="gallery-cards">
         <div class="card card-1 text-white">
           <img
-            src="/styles/img/At his friend, Jide Jubilee_s wedding in 1977.jpg"
+            src="https://i.ibb.co/LZBNyCh/At-his-friend-Jide-Jubilee-s-wedding-in-1977.jpg"
+            alt="At-his-friend-Jide-Jubilee-s-wedding-in-1977"
             class="card-img-top"
             alt="Image"
           />
@@ -95,7 +95,8 @@
         </div>
         <div class="card card-2 text-white">
           <img
-            src="/styles/img/Daddy on the harvest committee at St Joachim and Anne Catholic Church Meiran.JPG"
+            src="https://i.ibb.co/ZzWJCk5/Daddy-on-the-harvest-committee-at-St-Joachim-and-Anne-Catholic-Church-Meiran.jpg"
+            alt="Daddy-on-the-harvest-committee-at-St-Joachim-and-Anne-Catholic-Church-Meiran"
             class="card-img-top"
             alt="Image"
           />
@@ -108,7 +109,8 @@
         </div>
         <div class="card card-3 text-white">
           <img
-            src="/styles/img/Daddy and a friend at home in Abuja.JPG"
+            src="https://i.ibb.co/34DxcTy/Daddy-and-a-friend-at-home-in-Abuja.jpg"
+            alt="Daddy-and-a-friend-at-home-in-Abuja"
             class="card-img-top"
             alt="Image"
           />
@@ -118,7 +120,8 @@
         </div>
         <div class="card card-4 text-white">
           <img
-            src="/styles/img/Daddy and his friends at a party.JPG"
+            src="https://i.ibb.co/JpjD6xt/Daddy-and-his-friends-at-a-party.jpg"
+            alt="Daddy-and-his-friends-at-a-party"
             class="card-img-top"
             alt="Image"
           />
@@ -129,7 +132,8 @@
 
         <div class="card card-5 text-white">
           <img
-            src="/styles/img/Daddy and his wife Abosede.JPG"
+            src="https://i.ibb.co/4TZZ55b/Daddy-and-his-wife-Abosede.jpg"
+            alt="Daddy-and-his-wife-Abosede"
             class="card-img-top"
             alt="Image"
           />
@@ -139,7 +143,8 @@
         </div>
         <div class="card card-6 text-white">
           <img
-            src="/styles/img/Daddy and his wife at his daughter, Bola wedding.JPG"
+            src="https://i.ibb.co/J7G7TxN/Daddy-and-his-wife-at-his-daughter-Bola-wedding.jpg"
+            alt="Daddy-and-his-wife-at-his-daughter-Bola-wedding"
             class="card-img-top"
             alt="Image"
           />
@@ -149,7 +154,8 @@
         </div>
         <div class="card card-7 text-white">
           <img
-            src="/styles/img/Daddy and his wife, Abosede with friends.JPG"
+            src="https://i.ibb.co/CbDMJPK/Daddy-and-his-wife-Abosede-with-friends.jpg"
+            alt="Daddy-and-his-wife-Abosede-with-friends"
             class="card-img-top"
             alt="Image"
           />
@@ -159,7 +165,8 @@
         </div>
         <div class="card card-8 text-white">
           <img
-            src="/styles/img/Daddy on one of his philanthropic visits to the orphanage in Abuja.JPG"
+            src="https://i.ibb.co/0fPK2z7/Daddy-on-one-of-his-philanthropic-visits-to-the-orphanage-in-Abuja.jpg"
+            alt="Daddy-on-one-of-his-philanthropic-visits-to-the-orphanage-in-Abuja"
             class="card-img-top"
             alt="Image"
           />
@@ -171,7 +178,8 @@
         </div>
         <div class="card card-9 text-white">
           <img
-            src="/styles/img/Bukky with daddy during her 10th year birthday.jpeg"
+            src="https://i.ibb.co/1JCfgkS/Bukky-with-daddy-during-her-10th-year-birthday.jpg"
+            alt="Bukky-with-daddy-during-her-10th-year-birthday"
             class="card-img-top"
             alt="Image"
           />
@@ -183,6 +191,8 @@
         </div>
         <div class="card card-10 text-white">
           <img
+            src="https://i.ibb.co/VxDjy1b/Daddy-during-his-service-year.jpg"
+            alt="Daddy-during-his-service-year"
             src="/styles/img/Daddy during his service year.JPG"
             class="card-img-top"
             alt="Image"
@@ -193,6 +203,8 @@
         </div>
         <div class="card card-11 text-white">
           <img
+            src="https://i.ibb.co/5WZn3yn/Daddy-in-Paris.jpg"
+            alt="Daddy-in-Paris"
             src="/styles/img/Daddy in Paris.JPG"
             class="card-img-top"
             alt="Image"
@@ -203,7 +215,8 @@
         </div>
         <div class="card card-28 text-white">
           <img
-            src="/styles/img/Daddy, his wife, children and grandchildren at his 60th birthday party.JPG"
+            src="https://i.ibb.co/VQR6zLx/Daddy-with-his-wife-children-and-grandchildren.jpg"
+            alt="Daddy-with-his-wife-children-and-grandchildren"
             class="card-img-top"
             alt="Image"
           />
@@ -216,7 +229,8 @@
         </div>
         <div class="card card-13 text-white">
           <img
-            src="/styles/img/Daddy at home in the 90s.jpg"
+            src="https://i.ibb.co/zbRXkxN/Daddy-at-home-in-the-90s.jpg"
+            alt="Daddy-at-home-in-the-90s"
             class="card-img-top"
             alt="Image"
           />
@@ -226,7 +240,8 @@
         </div>
         <div class="card card-12 text-white">
           <img
-            src="/styles/img/His father, Late Pa Christopher Olatunde Dawodu.JPG"
+            src="https://i.ibb.co/s6YSDCs/His-father-Late-Pa-Christopher-Olatunde-Dawodu.jpg"
+            alt="His-father-Late-Pa-Christopher-Olatunde-Dawodu"
             class="card-img-top"
             alt="Image"
           />
@@ -238,7 +253,8 @@
         </div>
         <div class="card card-14 text-white">
           <img
-            src="/styles/img/Daddy on Corpus Christi-2020.jpg"
+            src="https://i.ibb.co/hX9WJJ8/Daddy-on-Corpus-Christi-2020.jpg"
+            alt="Daddy-on-Corpus-Christi-2020"
             class="card-img-top"
             alt="Image"
           />
@@ -248,7 +264,8 @@
         </div>
         <div class="card card-15 text-white">
           <img
-            src="/styles/img/Daddy at home in Abuja.jpg"
+            src="https://i.ibb.co/WFc0Pr4/Daddy-at-home-in-Abuja.jpg"
+            alt="Daddy-at-home-in-Abuja"
             class="card-img-top"
             alt="Image"
           />
@@ -258,7 +275,8 @@
         </div>
         <div class="card card-16 text-white">
           <img
-            src="/styles/img/Daddy with his daughter, Tosin in 1998.JPG"
+            src="https://i.ibb.co/DRNhtQH/Daddy-with-his-daughter-Tosin-in-1998.jpg"
+            alt="Daddy-with-his-daughter-Tosin-in-1998"
             class="card-img-top"
             alt="Image"
           />
@@ -268,7 +286,8 @@
         </div>
         <div class="card card-17 text-white">
           <img
-            src="/styles/img/Daddy with his children_ Tosin and Rebecca .JPG"
+            src="https://i.ibb.co/cJ9Jyqg/Daddy-with-his-children-Tosin-and-Rebecca.jpg"
+            alt="Daddy-with-his-children-Tosin-and-Rebecca"
             class="card-img-top"
             alt="Image"
           />
@@ -276,10 +295,10 @@
             <p class="card-text">With his daughters Tosin and Rebecca</p>
           </div>
         </div>
-
         <div class="card card-18 text-white">
           <img
-            src="/styles/img/Daddy with his daughters, Rebecca and Tosin in 2016.JPG"
+            src="https://i.ibb.co/DKQsFR2/Daddy-with-his-daughters-Rebecca-and-Tosin-in-2016.jpg"
+            alt="Daddy-with-his-daughters-Rebecca-and-Tosin-in-2016"
             class="card-img-top"
             alt="Image"
           />
@@ -291,7 +310,8 @@
         </div>
         <div class="card card-19 text-white">
           <img
-            src="/styles/img/His mother, late Susanna Dawodu (right).jpg"
+            src="https://i.ibb.co/BgDBWTW/His-mother-late-Susanna-Dawodu-right.jpg"
+            alt="His-mother-late-Susanna-Dawodu-right"
             class="card-img-top"
             alt="Image"
           />
@@ -301,7 +321,8 @@
         </div>
         <div class="card card-20 text-white">
           <img
-            src="/styles/img/Daddy with his wife, children and grandchildren .JPG"
+            src="https://i.ibb.co/WpqPhXR/Daddy-his-wife-children-and-grandchildren-at-his-60th-birthday-party.jpg"
+            alt="Daddy-his-wife-children-and-grandchildren-at-his-60th-birthday-party"
             class="card-img-top"
             alt="Image"
           />
@@ -310,7 +331,12 @@
           </div>
         </div>
         <div class="card card-21 text-white">
-          <img src="/styles/img/32.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/WGvwGHS/32.jpg"
+            alt="32"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">
               With Mama Otedola and his children after mass
@@ -319,7 +345,8 @@
         </div>
         <div class="card card-26 text-white">
           <img
-            src="/styles/img/On Tosin and Rebecca_s first holy communion in St Joachim and Anne, Meiran.JPG"
+            src="https://i.ibb.co/KKTvKMJ/On-Tosin-and-Rebecca-s-first-holy-communion-in-St-Joachim-and-Anne-Meiran.jpg"
+            alt="On-Tosin-and-Rebecca-s-first-holy-communion-in-St-Joachim-and-Anne-Meiran"
             class="card-img-top"
             alt="Image"
           />
@@ -332,7 +359,8 @@
         </div>
         <div class="card card-22 text-white">
           <img
-            src="/styles/img/IMG_3232.jpeg"
+            src="https://i.ibb.co/kHj2Vdp/IMG-3232.jpg"
+            alt="IMG-3232"
             class="card-img-top"
             alt="Image"
           />
@@ -342,7 +370,8 @@
         </div>
         <div class="card card-23 text-white">
           <img
-            src="/styles/img/Daddy_s wedding with his first wife, Late Mrs. O. Ayodele Dawodu.jpeg"
+            src="https://i.ibb.co/8MJyyGz/Daddy-s-wedding-with-his-first-wife-Late-Mrs-O-Ayodele-Dawodu.jpg"
+            alt="Daddy-s-wedding-with-his-first-wife-Late-Mrs-O-Ayodele-Dawodu"
             class="card-img-top"
             alt="Image"
           />
@@ -354,7 +383,7 @@
         </div>
         <div class="card card-24 text-white">
           <img
-            src="/styles/img/In his early 20s.jpg"
+            src="https://i.ibb.co/ZLLWKX9/In-his-early-20s.jpg"
             class="card-img-top"
             alt="Image"
           />
@@ -364,7 +393,8 @@
         </div>
         <div class="card card-25 text-white">
           <img
-            src="/styles/img/On his 74th birthday.JPG"
+            src="https://i.ibb.co/NrbwpPY/On-his-74th-birthday.jpg"
+            alt="On-his-74th-birthday"
             class="card-img-top"
             alt="Image"
           />
@@ -375,7 +405,8 @@
 
         <div class="card card-27 text-white">
           <img
-            src="/styles/img/One of his philanthropic visits to the orphanage in Abuja.JPG"
+            src="https://i.ibb.co/Yb4TnwT/One-of-his-philanthropic-visits-to-the-orphanage-in-Abuja.jpg"
+            alt="One-of-his-philanthropic-visits-to-the-orphanage-in-Abuja"
             class="card-img-top"
             alt="Image"
           />
@@ -387,7 +418,8 @@
         </div>
         <div class="card card-29 text-white">
           <img
-            src="/styles/img/With his daughter and son in-law during his house warming ceremony in Lagos.JPG"
+            src="https://i.ibb.co/CKfxvGV/With-his-daughter-and-son-in-law-during-his-house-warming-ceremony-in-Lagos.jpg"
+            alt="With-his-daughter-and-son-in-law-during-his-house-warming-ceremony-in-Lagos"
             class="card-img-top"
             alt="Image"
           />
@@ -397,7 +429,8 @@
         </div>
         <div class="card card-30 text-white">
           <img
-            src="/styles/img/With his godmother, Lady Doja Otedola.JPG"
+            src="https://i.ibb.co/0BYq32W/With-his-godmother-Lady-Doja-Otedola.jpg"
+            alt="With-his-godmother-Lady-Doja-Otedola"
             class="card-img-top"
             alt="Image"
           />
@@ -407,7 +440,8 @@
         </div>
         <div class="card card-31 text-white">
           <img
-            src="/styles/img/With his grandchildren.jpeg"
+            src="https://i.ibb.co/NZfVd6Y/With-his-grandchildren.jpg"
+            alt="With-his-grandchildren"
             class="card-img-top"
             alt="Image"
           />
@@ -417,7 +451,8 @@
         </div>
         <div class="card card-32 text-white">
           <img
-            src="/styles/img/With his sons, Seun and Tunde.jpeg"
+            src="https://i.ibb.co/JQY0Yq7/With-his-sons-Seun-and-Tunde.jpg"
+            alt="With-his-sons-Seun-and-Tunde"
             class="card-img-top"
             alt="Image"
           />
@@ -427,17 +462,19 @@
         </div>
         <div class="card card-33 text-white">
           <img
-            src="/styles/img/With Tosin on a video call session.JPG"
+            src="https://i.ibb.co/MN7xsn9/With-Tosin-on-a-video-call-session.jpg"
+            alt="With-Tosin-on-a-video-call-session"
             class="card-img-top"
             alt="Image"
           />
           <div class="card-img-overlay">
-            <p class="card-text">With Tosin on a video call session</p>
+            <p class="card-text">With Tosin on a video call</p>
           </div>
         </div>
         <div class="card card-34 text-white">
           <img
-            src="/styles/img/0aa310cf-d892-4f18-9da6-de43ecc2d45c.JPG"
+            src="https://i.ibb.co/sgCPgf2/0aa310cf-d892-4f18-9da6-de43ecc2d45c.jpg"
+            alt="0aa310cf-d892-4f18-9da6-de43ecc2d45c"
             class="card-img-top"
             alt="Image"
           />
@@ -446,19 +483,34 @@
           </div>
         </div>
         <div class="card card-35 text-white">
-          <img src="/styles/img/1.JPG" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/DtbHhcM/1.jpg"
+            alt="1"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">After mass in 2020</p>
           </div>
         </div>
         <div class="card card-49 text-white">
-          <img src="/styles/img/10.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/WPX4VMn/10.jpg"
+            alt="Image 10"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">At home in 2016</p>
           </div>
         </div>
         <div class="card card-36 text-white">
-          <img src="/styles/img/11.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/m4vBBWG/11.jpg"
+            alt="11"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">
               With his daughters, Tosin and Rebecca in 2016
@@ -466,50 +518,90 @@
           </div>
         </div>
         <div class="card card-37 text-white">
-          <img src="/styles/img/22.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/1sPHdWm/22.jpg"
+            alt="22"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">With his daughter, Tosin after mass</p>
           </div>
         </div>
         <div class="card card-38 text-white">
-          <img src="/styles/img/3.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/sWS8F5N/3.jpg"
+            alt="3"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">On Corpus Christi day in 2020</p>
           </div>
         </div>
 
         <div class="card card-40 text-white">
-          <img src="/styles/img/4.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/B6887sN/4.jpg"
+            alt="4"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">With Rev. Fr. Emmanuel and his children</p>
           </div>
         </div>
         <div class="card card-41 text-white">
-          <img src="/styles/img/5.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/48HHTWp/5.jpg"
+            alt="5"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">With his friend, Baba Ikorodu</p>
           </div>
         </div>
         <div class="card card-42 text-white">
-          <img src="/styles/img/6.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/165w0Rc/6.jpg"
+            alt="6"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">Rebecca dressing him up for a shoot</p>
           </div>
         </div>
         <div class="card card-43 text-white">
-          <img src="/styles/img/7.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/RbVXwbh/7.jpg"
+            alt="7"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">With his daughter, Tosin</p>
           </div>
         </div>
         <div class="card card-44 text-white">
-          <img src="/styles/img/8.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/YPvyyPy/8.jpg"
+            alt="8"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">With Tosin in January 2018</p>
           </div>
         </div>
         <div class="card card-45 text-white">
-          <img src="/styles/img/9.jpg" class="card-img-top" alt="Image" />
+          <img
+            src="https://i.ibb.co/Jk3qcpw/9.jpg"
+            alt="9"
+            class="card-img-top"
+            alt="Image"
+          />
           <div class="card-img-overlay">
             <p class="card-text">
               With his children on the 1st of January, 2018
@@ -518,7 +610,8 @@
         </div>
         <div class="card card-46 text-white">
           <img
-            src="/styles/img/With_Tosin_after_mass.jpg"
+            src="https://i.ibb.co/YDprwpr/With-Tosin-after-mass.jpg"
+            alt="With-Tosin-after-mass"
             class="card-img-top"
             alt="Image"
           />
@@ -528,7 +621,8 @@
         </div>
         <div class="card card-47 text-white">
           <img
-            src="/styles/img/With_his_grandchildren.jpg"
+            src="https://i.ibb.co/NKrwxQS/With-his-grandchildren.jpg"
+            alt="With-his-grandchildren"
             class="card-img-top"
             alt="Image"
           />
