--- a/html/index.html
+++ b/html/index.html
@@ -87,21 +87,21 @@
           <div class="carousel-item active">
             <img
               class="d-block w-50"
-              src="/styles/img/1.jpeg"
+              src="https://i.ibb.co/X3pF8p7/1.jpg"
               alt="First slide"
             />
           </div>
           <div class="carousel-item">
             <img
               class="d-block w-50"
-              src="/styles/img/2.jpg"
+              src="https://i.ibb.co/FzJPL9n/2.jpg"
               alt="Second slide"
             />
           </div>
           <div class="carousel-item">
             <img
               class="d-block w-50"
-              src="/styles/img/3.jpg"
+              src="https://i.ibb.co/p42n1bd/3.jpg"
               alt="Third slide"
             />
           </div>
