Added dynamic text to some pages

--- a/html/tribute.html
+++ b/html/tribute.html
@@ -74,7 +74,7 @@
     >
       <i class="fas fa-arrow-up"></i>
     </button>
-    <audio autoplay>
+    <audio id="audio" autoplay loop>
       <source
         src="/styles/media/Ebenezer-Obey-Eni-Ri-Nkan-He.mp3"
         type="audio/mpeg"
@@ -82,13 +82,10 @@
     </audio>
     <div class="home">
       <div class="saying">
-        <h1 id="wording">
-          <em
-            >"Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Repudiandae quisquam vel officiis asperiores est voluptas."</em
-          >
+        <h1>
+          <em id="wording">"It costs you nothing to be good"</em>
         </h1>
-        <p1 id="wording-name">-Olagbenga Dawodu</p1>
+        <p id="wording-name">-Olagbenga Dawodu</p>
       </div>
       <div class="tribute-words">
         <div class="tribute-box">
@@ -596,6 +593,8 @@
     <footer>
       <h4 id="foot-text">With Love, Tosin</h4>
     </footer>
+    <script src="/js/landing.js"></script>
+    <script src="/js/tribute.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
