--- a/html/gallery.html
+++ b/html/gallery.html
@@ -633,7 +633,7 @@
       </div>
     </div>
     <footer>
-      <h4 id="foot-text">With Love, Tosin</h4>
+      <h4 id="foot-text">Tosin Dawodu© || 2022</h4>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
