--- a/html/landing.html
+++ b/html/landing.html
@@ -13,7 +13,6 @@
       src="https://kit.fontawesome.com/3ebcd25298.js"
       crossorigin="anonymous"
     ></script>
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
@@ -60,7 +59,7 @@
         </div>
       </nav>
     </header>
-       <audio autoplay loop>
+    <audio id="audio" autoplay loop>
       <source
         src="/styles/media/Ebenezer-Obey-Eni-Ri-Nkan-He.mp3"
         type="audio/mpeg"
@@ -83,7 +82,7 @@
         </div>
       </div>
     </div>
-
+    <script src="/js/landing.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
