Made slight modifications to the HTML and CSS files

--- a/html/landing.html
+++ b/html/landing.html
@@ -77,7 +77,7 @@
           <div id="lander-text">
             <h1>In Loving Memories....</h1>
             <h2>Olagbenga Ezekiel Dawodu</h2>
-            <h3>31/03/1947 to 14/01/2022</h3>
+            <h3>31 March 1947 - 14 January 2022</h3>
           </div>
         </div>
       </div>
