--- a/html/tribute.html
+++ b/html/tribute.html
@@ -591,7 +591,7 @@
       </div>
     </div>
     <footer>
-      <h4 id="foot-text">With Love, Tosin</h4>
+      <h4 id="foot-text">Tosin Dawodu© || 2022</h4>
     </footer>
     <script src="/js/landing.js"></script>
     <script src="/js/tribute.js"></script>
