--- a/html/biography.html
+++ b/html/biography.html
@@ -46,7 +46,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/html/index.html"
+                <a class="nav-link" aria-current="page" href="/html/biography.html"
                   >Home</a
                 >
               </li>
