--- a/html/tribute.html
+++ b/html/tribute.html
@@ -49,12 +49,12 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="/html/index.html"
+                  href="/html/biography.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/html/index.html">Biography</a>
+                <a class="nav-link" href="/html/biography.html">Biography</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/html/tribute.html">Tributes</a>
