--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#biography">Biography</a>
+                <a class="nav-link" href="/html/biography.html">Biography</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/html/tribute.html">Tributes</a>
