--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/html/index.html"
+                <a class="nav-link" aria-current="page" href=""
                   >Home</a
                 >
               </li>
