Solve for background video not working in MV of deployed site

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       />
     </audio>
     <div class="home">
-      <video autoplay muted loop id="video">
+      <video autoplay muted loop playsinline id="video">
         <source
           src="https://storage.coverr.co/videos/iqc4Re02LUTLOmvnwYVVTomGzD8nJK5tH/download?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6Ijg3NjdFMzIzRjlGQzEzN0E4QTAyIiwiaWF0IjoxNjUyOTA4MDEzfQ.E-a6nRn2Nthrast9BZAyEov9lCmthTHKvkDA6VqIqko&filename=Waves%20crashing%20together"
           type="video/mp4"
