--- a/html/gallery.html
+++ b/html/gallery.html
@@ -50,7 +50,7 @@
                   <a
                     class="nav-link active"
                     aria-current="page"
-                    href="/html/biography.html"
+                    href="/index.html"
                     >Home</a
                   >
                 </li>
