--- a/html/tribute.html
+++ b/html/tribute.html
@@ -49,7 +49,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="/html/biography.html"
+                  href="/index.html"
                   >Home</a
                 >
               </li>
