--- a/html/gallery.html
+++ b/html/gallery.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/styles/gallery.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Exo:wght@400;700&family=Titillium+Web:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/styles/gallery.css" />
+
     <script
       src="https://kit.fontawesome.com/3ebcd25298.js"
       crossorigin="anonymous"
@@ -31,7 +32,7 @@
   <body>
     <div class="home">
       <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <button
               class="navbar-toggler"
@@ -47,10 +48,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="/index.html"
+                  <a class="nav-link" aria-current="page" href="/index.html"
                     >Home</a
                   >
                 </li>
