modified the nav bar for responsive screens

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -78,7 +78,7 @@
         <i class="fas fa-arrow-up"></i>
       </button>
       <div class="gallery-cards">
-        <div class="card card-1 text-white">
+        <div class="card box-card card-1 text-white">
           <img
             src="https://i.ibb.co/LZBNyCh/At-his-friend-Jide-Jubilee-s-wedding-in-1977.jpg"
             alt="At-his-friend-Jide-Jubilee-s-wedding-in-1977"
